[metadata]
name = crx3
version = 0.0.2
description = Chrome extension (crx) packaging & parsing library.
long_description = file: README.md
long_description_content_type = text/markdown
author = liying
author_email = liruoer2008@yeah.net
url = https://github.com/liying2008/python-crx3
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Build Tools
    Topic :: Utilities
keywords = crx chrome edge extension
project_urls =
    Bug Reports = https://github.com/liying2008/python-crx3/issues
    Source Code = https://github.com/liying2008/python-crx3

[options]
packages=find:
install_requires =
    cryptography>=40.0.2
    protobuf>=3.19.6
python_requires = >=3.7
package_dir =
    =src
;include_package_data = True
zip_safe = no

[options.packages.find]
where=src

;[options.package_data]
;* = LICENSE

;[options.entry_points]
;console_scripts =
;    crx3 = crx3.__main__:main
